--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,6 +91,13 @@ body {
   font-family: DMSans-Bold;
 }
 
+.launch-btn {
+  width: 141px;
+  height: 44px;
+  background: linear-gradient(133.61deg, #3555FF 10%, #A157FF 100%);
+  border-radius: 4px;
+}
+
 .ranking-bg {
   background-image: url('/ranking/bg3.png');
   background-repeat: no-repeat;
