--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,6 +62,9 @@ body {
       font-family: Poppins;
   }
 }
+.font-fnormal{
+  font-family: Poppins;
+}
 .font-fmedium{
   font-family: Poppins-Medium;
 }
