--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -346,6 +346,9 @@ body {
   margin-bottom: 10px;
   margin-right: 24px;
 }
+.menu-text{
+  
+}
 
 .like-wrap .menu-text.up {
   background: linear-gradient(280.16deg, #F73B47 8.51%, #FF7E35 142.08%);
