--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -104,11 +104,11 @@ body {
 .ranking-bg {
   background-image: url('/ranking/bg3.png');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 .addressan-bg {
   background-image: url('/addressan/bg.png');
-  background-size: 100%;
+  background-size: cover;
 }
 .holder_bg {
   background-image: url('/addressan/bg1.png');
@@ -139,8 +139,10 @@ body {
 .table__body .table__row:hover {
   background-color: #D7E4FD;
 }
-.chart-tip {
-  position: absolute;
+.table__row .italic.w-9 {
+  color: #7F8792;
+}
+.chart-tip2 {
   background-color: rgba(51, 56, 62, 0.8);
   border-radius: 8px;
   font-size: 20px;
@@ -150,6 +152,10 @@ body {
   display: flex;
   align-items: center;
   height: 40px;
+}
+.chart-tip {
+  position: absolute;
+  height: 100px;
   opacity: 0;
   cursor: pointer;
 }
@@ -386,4 +392,13 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+}
+
+.text-ellipsis {
+ 
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  text-overflow: ellipsis;
 }
