--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,6 +93,12 @@ body {
 .ranking__wrap .font-fbold {
   font-family: DMSans-Bold;
 }
+.ranking__wrap .font-ffmedium{
+  font-family: Poppins-Medium
+}
+.ranking__wrap .font-ffbold {
+  font-family: Poppins-Bold;
+}
 
 .launch-btn {
   width: 141px;
@@ -104,11 +110,11 @@ body {
 .ranking-bg {
   background-image: url('/ranking/bg3.png');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 .addressan-bg {
   background-image: url('/addressan/bg.png');
-  background-size: 100%;
+  background-size: cover;
 }
 .holder_bg {
   background-image: url('/addressan/bg1.png');
@@ -133,14 +139,23 @@ body {
   background-clip: text;
   text-fill-color: transparent;
 }
+.reddit-title2{
+  background: linear-gradient(280.16deg, #F73B47 8.51%, #FF7E35 142.08%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
 .table__body .table__row:nth-child(2n) {
   background-color: #F8F9FF;
 }
 .table__body .table__row:hover {
   background-color: #D7E4FD;
 }
-.chart-tip {
-  position: absolute;
+.table__row .italic.w-9 {
+  color: #7F8792;
+}
+.chart-tip2 {
   background-color: rgba(51, 56, 62, 0.8);
   border-radius: 8px;
   font-size: 20px;
@@ -150,8 +165,15 @@ body {
   display: flex;
   align-items: center;
   height: 40px;
+}
+.chart-tip {
+  position: absolute;
+  height: 100px;
+  width: 200px;
   opacity: 0;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 }
 .num-text1 {
   background: linear-gradient(124.16deg, #3555FF 8.05%, #A157FF 66.68%);
@@ -372,7 +394,7 @@ body {
 }
 
 
-.like-wrap .menu-text.up {
+.like-wrap .num-text1.up {
   background: linear-gradient(280.16deg, #F73B47 8.51%, #FF7E35 142.08%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -380,10 +402,20 @@ body {
   text-fill-color: transparent;
 }
 
-.like-wrap .menu-text.down {
+
+.like-wrap .num-text1.down {
   background: linear-gradient(124.16deg, #3F4664 8.05%, #3F4664 66.68%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+}
+
+.text-ellipsis {
+ 
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  text-overflow: ellipsis;
 }
