--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,6 +120,11 @@ body {
   background-image: url('/addressan/bg.png');
   background-size: cover;
 }
+.menu-title-white {
+  background-color: rgba(255, 255, 255, 0.3);
+  backdrop-filter: blur(5px);
+  border-bottom: 1px solid white;
+}
 @media screen and (max-width:1670px) {
   .left1440 {
     left: -90px;
