--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -160,7 +160,7 @@ body {
   box-sizing: border-box;
 }
 .reddit-title{
-  background: linear-gradient(280.16deg, #F73B47 8.51%, #FF7E35 142.08%);
+  background: linear-gradient(127deg, #546FFF 15.65%, #9644FF 77.85%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
